--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build the mod
-        uses: geode-sdk/build-geode-mod@profile
+        uses: geode-sdk/build-geode-mod@main
         with:
           combine: true
       
